@@ -10,6 +10,10 @@ Features
 - Internal: catch unhashable discriminators early (raise an error instead of
   allowing them to find their way into resolveConflicts).
 
+- The `match_param` view predicate now accepts a string or a tuple.
+  This replaces the broken behavior of accepting a dict. See
+  https://github.com/Pylons/pyramid/issues/425 for more information.
+
 Bug Fixes
 ---------
 
@@ -20,6 +24,13 @@ Bug Fixes
 
 - The ``prequest`` script would fail when used against URLs which did not
   return HTML or text.  See https://github.com/Pylons/pyramid/issues/381
+
+Backwards Incompatibilities
+---------------------------
+
+- The `match_param` view predicate no longer accepts a dict. This will
+  have no negative affect because the implementation was broken for
+  dict-based arguments.
 
 Documentation
 -------------
